Bug 251355 - [GTK] For Wayland target, linker fails for dependency on WPEBackend_fdo version 1.6.0
Summary: [GTK] For Wayland target, linker fails for dependency on WPEBackend_fdo versi...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Trivial
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-30 06:24 PST by kiran
Modified: 2023-02-01 06:31 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kiran 2023-01-30 06:24:52 PST
Background: I am not using Flatpak builds and trying to build GTK port using direct CMake command. So this may be a non issue.

Issue: When  building for Wayland (ENABLE_WAYLAND_TARGET=ON), currently dependency is on wpebackend_fdo version 1.6.0 (OptionsGTK.cmake). But 1.6.0 [version](https://github.com/Igalia/WPEBackend-fdo/commit/1dda80de5372e56cdc6f818a3fca493f7cc1f9d6) does not export call to version numbers. So linker fails with undefined references to wpe_fdo_get_major_version/wpe_fdo_get_minor_version/wpe_fdo_get_micro_version. 

It is fixed in wpebackend_fdo version 1.6.1. So I feel wpebackend_fdo version should be updated to 1.6.1 in OptionsGTK.cmake.

I like to submit a minimal PR which updates version to wpebackend_fdo 1.6.1 in OptionsGTK.cmake. But that might cause build failures in certain distributions. For e.g Works in Ubuntu 22.04, but fails in Ubuntu 20.04 where the package manager install defaults to version 1.6.0. Hope EWS will catch if so.
Comment 1 Michael Catanzaro 2023-01-30 06:50:20 PST
Hmm, OK, can you guard the use of these calls with WPE_CHECK_VERSION? That way it won't break Ubuntu 20.04, which is still supported for a little bit longer.
Comment 2 kiran 2023-01-31 06:03:48 PST
Pull request: https://github.com/WebKit/WebKit/pull/9380
Comment 3 kiran 2023-01-31 06:25:17 PST
(In reply to Michael Catanzaro from comment #1)
> Hmm, OK, can you guard the use of these calls with WPE_CHECK_VERSION? That
> way it won't break Ubuntu 20.04, which is still supported for a little bit
> longer.

ok. I added version checks and raised PR. But I raised this bug assuming wayland builds are currently failing on Ubuntu 20.04. And from your reply I feel like wayland builds are already succeeding on Ubuntu 20.04. I like to know how are they succeeding - Is it because of flatpak builds ?
Comment 4 Michael Catanzaro 2023-02-01 06:09:43 PST
Guess: our Ubuntu 20.04 bots also build their own wpebackend-fdo?
Comment 5 EWS 2023-02-01 06:31:41 PST
Committed 259676@main (7f5f2f78dedb): <https://commits.webkit.org/259676@main>

Reviewed commits have been landed. Closing PR #9380 and removing active labels.